--- a/product-grid.html
+++ b/product-grid.html
@@ -108,7 +108,7 @@
                                         <a href="#"><i class="icon-magnifier icons"></i></a>
                                     </div>
                                     <div class="header__account">
-                                        <a href="#"><i class="icon-user icons"></i></a>
+                                        <a href="sing_up.html"><i class="icon-user icons"></i></a>
                                     </div>
                                 </div>
                             </div>
